chore(S0): 초기 환경 세팅 정리